# Medieval-town-map-generator

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  readme.rst  town_generator.rst
resources/: city.json
src/: area.py  city.py  regions.py  tools.py  viewer.py
src/town_generator/: area.py  city.py  doors.py  gardens.py  houses.py  regions.py  roads.py  tools.py  towers.py  university.py  viewer.py  walls.py
tests/: functional_tests.py  towers_test.py
